some API updates
