# controllers/review.js
@@ -18,13 +18,13 @@ const getSingle = async (req, res) => {
     const result = await mongodb.getDb().collection("reviews").findOne({ _id: reviewId });
 
     if (!result) {
-      return res.status(404).json({ message: "Reviews not found." });
+      return res.status(404).json({ message: "Review not found." });
     }
 
     res.setHeader("Content-Type", "application/json");
     res.status(200).json(result);
   } catch (err) {
-    res.status(500).json({ message: "Failed to retrieve reviews.", error: err.message });
+    res.status(500).json({ message: "Failed to retrieve review.", error: err.message });
   }
 };
 
@@ -41,7 +41,7 @@ const getByUser = async (req, res) => {
 
 const getByVehicle = async (req, res) => {
   try {
-    const userId = req.params.userId;
+    const vehicleId = req.params.vehicleId;
     const result = await mongodb.getDb().collection("reviews").find({ vehicleId });
     const reviews = await result.toArray();
     res.status(200).json(reviews);
@@ -52,36 +52,42 @@ const getByVehicle = async (req, res) => {
 
 const addReview = async (req, res) => {
   try {
-    const reviews = {
+    const review = {
       userId: req.body.userId,
       vehicleId: req.body.vehicleId,
+      rating: req.body.rating,
+      title: req.body.title,
+      comment: req.body.comment,
       createdAt: new Date()
     };
 
-    const response = await mongodb.getDb().collection("reviews").insertOne(reviews);
+    const response = await mongodb.getDb().collection("reviews").insertOne(review);
 
     if (response.acknowledged) {
       res.status(201).json(response);
     } else {
-      res.status(500).json({ message: "Failed to add reviews." });
+      res.status(500).json({ message: "Failed to add review." });
     }
   } catch (err) {
-    res.status(500).json({ message: "Failed to add reviews.", error: err.message });
+    res.status(500).json({ message: "Failed to add review.", error: err.message });
   }
 };
 
 const updateReview = async (req, res) => {
   try {
     const reviewId = new ObjectId(req.params.id);
-    const reviews = {
+    const review = {
       userId: req.body.userId,
       vehicleId: req.body.vehicleId,
+      rating: req.body.rating,
+      title: req.body.title,
+      comment: req.body.comment,
       updatedAt: new Date()
     };
 
     const response = await mongodb.getDb().collection("reviews").replaceOne(
       { _id: reviewId },
-      favorite
+      review
     );
 
     if (response.matchedCount === 0) {
